tests/resource/invalid/type/collection/dictionary_use_value_as_other_type.mamba
def a := { 20 => "asdf", 30 => "asdf" }

def i: Int := a[20]
